--- a/pom.xml
+++ b/pom.xml
@@ -203,7 +203,7 @@
 			<plugin>
 				<groupId>io.apigee.build-tools.enterprise4g</groupId>
 				<artifactId>apigee-edge-maven-plugin</artifactId>
-				<version>1.1.5</version>
+				<version>1.1.6</version>
 				<executions>
 					<execution>
 						<id>configure-bundle-step</id>
@@ -361,7 +361,7 @@
 							<goal>jmeter</goal>
 						</goals>
 						<configuration>
-							<skipTests>${skipTests}</skipTests>
+							<skipTests>${skipPerformanceTests}</skipTests>
 							<ignoreResultFailures>true</ignoreResultFailures>
 							<suppressJMeterOutput>false</suppressJMeterOutput>
 							<propertiesUser>
