--- a/pom.xml
+++ b/pom.xml
@@ -251,6 +251,7 @@
 						<include>resources/edge/env/*/targetServers.json</include>
 						<include>resources/edge/org/apiProducts.json</include>
 						<include>resources/edge/org/developerApps.json</include>
+						<include>resources/specs/pingstatus-oauth-v1.yaml</include>
 						<!--<include>test/performance/testdata.csv</include>-->
 					</includes>
 					<replacements>
@@ -321,7 +322,7 @@
 			<plugin>
 				<groupId>com.apigee.edge.config</groupId>
 				<artifactId>apigee-config-maven-plugin</artifactId>
-				<version>1.2.1</version>
+				<version>1.3.8</version>
 				<executions>
 					<execution>
 						<id>create-config-cache</id>
@@ -370,6 +371,13 @@
 						<phase>install</phase>
 						<goals>
 							<goal>exportAppKeys</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>create-config-specs</id>
+						<phase>install</phase>                        
+						<goals>
+							<goal>specs</goal>
 						</goals>
 					</execution>
 				</executions>
