--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "1.0.0",
   "devDependencies": {
     "apickli": "^1.7.4",
-    "cucumber": "^1.3.2",
-    "prettyjson": "^1.1.3",
+    "apigeelint": "^0.4.3",
     "bluebird": "^3.3.5",
     "chai": "^3",
     "chai-fuzzy": "^1",
-    "mocha": "^2",
-    "sinon": "^1",
-    "apigeelint": "^0.2.0"
+    "cucumber": "^1.3.2",
+    "mocha": "^7.1.2",
+    "prettyjson": "^1.1.3",
+    "sinon": "^1"
   },
   "jshintConfig": {
     "predef": [
