--- a/resources/specs/pingstatus-oauth-v1.yaml
+++ b/resources/specs/pingstatus-oauth-v1.yaml
@@ -4,10 +4,25 @@ info:
   title: pingstatus-oauth-v1
   description: |
     Health checks for proxy and target backend.
-    * Client Credentials Integrated: TUZybEe4SrLfYB6RivZJ2yVzY6CBS7XX XXXXXXXXXXXXXXXX
-    * Client Credentials Drupal 8:   Xq7RATcIDaUkhxGNEQOxpdugZcPa8mXX XXXXXXXXXXXXXXXX
-    * Person Credentials Password:   demouser demouser1
-    * Person Credentials Authorization Code: per IdP
+    
+    Security Schemes:
+    * Client Credentials
+    * Password
+    * Authorization Code
+    
+    Details:
+    * Integrated Portal
+      * App Credentials: TUZybEe4SrLfYB6RivZJ2yVzY6CBS7XX XXXXXXXXXXXXXXXX
+      * Callback URL: https://developer.kurtkanaskie.net/oauth_redirect
+    
+    
+    * Drupal 8:
+      * App Credentials: Xq7RATcIDaUkhxGNEQOxpdugZcPa8mXX XXXXXXXXXXXXXXXX
+      * Callback URL: http://dev-amer-demo13.pantheonsite.io/oauth_redirect
+
+
+    * Person Credentials Password grant:   demouser demouser1 (mock IdP)
+    * Person Credentials for Authorization Code: per IdP (e.g. Google project)
   contact:
     email: kurtkanaskie@google.com
 servers:
