Obfuscated ID and Secret

--- a/resources/specs/pingstatus-oauth-v1.yaml
+++ b/resources/specs/pingstatus-oauth-v1.yaml
@@ -13,12 +13,12 @@ info:
     
     Details:
     * Integrated Portal
-      * App Credentials: TUZybEe4SrLfYB6RivZJ2yVzY6CBS7LW SfLdAODuAtrlPsZt
+      * App Credentials: TUZybEe4SrLfYB6RivZJ2yVzY6CBSXXX SfLdAODuAtrlPXXX
       * Callback URL: https://developer.kurtkanaskie.net/oauth_redirect
     
     
     * Drupal 8:
-      * App Credentials: Xq7RATcIDaUkhxGNEQOxpdugZcPa8m6R xz87RzBohOGSGlkA
+      * App Credentials: Xq7RATcIDaUkhxGNEQOxpdugZcPa8XXX xz87RzBohOGSGXXX
       * Callback URL: http://dev-amer-demo13.pantheonsite.io/oauth_redirect
 
 
