fixing security alerts and https for repo

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 		<pluginRepository>
 			<id>central</id>
 			<name>Maven Plugin Repository</name>
-			<url>http://repo1.maven.org/maven2</url>
+			<url>https://repo1.maven.org/maven2</url>
 			<layout>default</layout>
 			<snapshots>
 				<enabled>false</enabled>
@@ -304,7 +304,7 @@
 			<plugin>
 				<groupId>io.apigee.build-tools.enterprise4g</groupId>
 				<artifactId>apigee-edge-maven-plugin</artifactId>
-				<version>1.1.6</version>
+				<version>1.1.7</version>
 				<executions>
 					<execution>
 						<id>configure-bundle-step</id>
