--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "cucumber": "^1.3.2",
     "mocha": "^7.1.2",
     "prettyjson": "^1.1.3",
-    "sinon": "^1"
+    "sinon": "^1",
+    "bl": ">=2.2.1"
   },
   "jshintConfig": {
     "predef": [
