--- a/resources/specs/pingstatus-oauth-v1.yaml
+++ b/resources/specs/pingstatus-oauth-v1.yaml
@@ -2,28 +2,7 @@ openapi: 3.0.0
 info:
   version: 1.0.0
   title: pingstatus-oauth-v1
-  description: |
-    Health checks for proxy and target backend.
-    
-    Security Schemes:
-    * Client Credentials
-    * Password
-    * Authorization Code
-
-    
-    Details:
-    * Integrated Portal
-      * App Credentials: TUZybEe4SrLfYB6RivZJ2yVzY6CBSXXX SfLdAODuAtrlPXXX
-      * Callback URL: https://developer.kurtkanaskie.net/oauth_redirect
-    
-    
-    * Drupal 8:
-      * App Credentials: Xq7RATcIDaUkhxGNEQOxpdugZcPa8XXX xz87RzBohOGSGXXX
-      * Callback URL: http://dev-amer-demo13.pantheonsite.io/oauth_redirect
-
-
-    * Person Credentials Password grant:   demouser demouser1 (mock IdP)
-    * Person Credentials for Authorization Code: per IdP (e.g. Google project)
+  description: Health checks for proxy and target backend, using security schemes Client Credentials, Password and Authorization Code.
   contact:
     email: kurtkanaskie@google.com
 servers:
